src/css/index.scss
.form-tips {
  font-size: 10px;
  text-align: left;
  color: var(--el-color-danger);
}

.flex-class {
  display: flex;
  justify-content: center;
}

.footer-wrapper {
  z-index: 999;
  height: 48px;
  padding: 10px;
  width: 100%;
  position: fixed;
  left: 0;
  bottom: 0;
  background: #fff;
  box-sizing: border-box;
  border-top: solid 1px var(--el-border-color-base);
}

textarea[name="editorValue"] {
  display: none;
}

